avoid header jumping when loading page

--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -14,6 +14,13 @@
   @include media-breakpoint-up(md) {
     background: white;
     transform: translateY(0);
+    height: 64px;
+  }
+  @include media-breakpoint-up(lg) {
+    height: 72px;
+  }
+  @include media-breakpoint-up(xl) {
+    height: 76px;
   }
 }
 
